--- a/src/main/resources/static/appointments.html
+++ b/src/main/resources/static/appointments.html
@@ -5,7 +5,7 @@
 ##_header.html
 
 <div class="row">
-    <div class="page-one col-md-12 col-lg-12">
+    <div class="col-md-12 col-lg-12" id="page-one">
         <table class=" table table-bordered table-hover" id="patients-table">
             <thead>
             <tr>
@@ -26,7 +26,7 @@
                 <td>#hospital-number</td>
                 <td>#date-of-birth</td>
                 <td>
-                    <button class="btn" id="select">Select #name</button>
+                    <button class="btn" data-id="#id" data-name="#name" id="select-patient">Select #name</button>
                 </td>
             </tr>
             #[/each]
@@ -40,39 +40,53 @@
         </table>
     </div>
 
-    <div hidden class="show-patient-selected text-center col-md-12 col-lg-12" id="page-two">
-        <p>patient selected</p>
-        <button type="button" id="bookTherapy">Select Therapy</button>
-        <button type="button" id="go-back-page-one">Change</button>
+    <div hidden class="col-md-12 col-lg-12" id="page-two">
+        <p>Patient Selected: <span class="patient-selected"></span> <a class="small" id="go-back-to-select-patient">[Change]</a></p>
+
+        <table class="table table-bordered table-hover" id="therapies-table">
+            <thead>
+            <tr>
+                <th class="text-center">Name</th>
+                <th class="text-center">Default Duration</th>
+                <th class="text-center">Tracer Required</th>
+                <th class="text-center">Tracer Dose</th>
+                <th class="text-center">Camera Required</th>
+                <th class="text-center">Actions</th>
+            </tr>
+            </thead>
+
+            <tbody>
+            #[collection: therapies]
+
+            #[pre]#[/pre]
+
+            #[each]
+            <tr>
+                <td>#name</td>
+                <td>#default-duration mins</td>
+                <td>#tracer-required-name</td>
+                <td>#tracer-dose</td>
+                <td>#camera-type-label</td>
+                <td>
+                    <button class="btn" data-id="#id" data-name="#name" id="select-therapy">Select</button>
+                </td>
+            </tr>
+            #[/each]
+
+            #[post]#[/post]
+
+            #[empty]#[/empty]
+
+            #[/collection]
+            </tbody>
+        </table>
     </div>
 
-    <div hidden class="book-therapy text-center col-md-12 col-lg-12" id="page-three">
-        <form>Search Therapy
-            <input type="search" name="therapySearch"></form>
+    <div hidden class="col-md-12 col-lg-12" id="page-three">
+        <p>Patient Selected: <span class="patient-selected"></span></p>
+        <p>Therapy Selected: <span class="therapy-selected"></span> <a class="small" id="go-back-to-select-therapy">[Change]</a></p>
 
-        <div class="col-lg-12 col-md-12">
-            <table class="table table-bordered table-hover">
-                <thead>
-                <tr>
-                    <th class="text-center">Therapy</th>
-                    <th class="text-center">Select</th>
-                </tr>
-                <tr>
-                    <td class="text-center">xxxx</td>
-                    <td class="text-center">
-                        <button type="button" id="selectTherapy">Select</button>
-                    </td>
-                </tr>
-                </thead>
-            </table>
-
-        </div>
-    </div>
-
-    <div hidden class="show-therapy-selected text-center col-md-12 col-lg-12" id="page-four">
-        <p>therapy selected</p>
-        <button type="button" id="viewAvailableAppointments">View Available Appointments</button>
-        <button type="button" id="go-back-page-three">Change</button>
+        <button class="btn btn-primary" id="view-available-appointments">View Available Appointments</button>
     </div>
 
     <div hidden class="calendar"></div>
